curl-a-joke-deploy-1.yml
{
  "kind": "Deployment",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "curl-a-joke",
    "namespace": "default",
    "selfLink": "/apis/extensions/v1beta1/namespaces/default/deployments/curl-a-joke",
    "uid": "8edd34a8-ca56-11e7-ae94-525400ad0d5b",
    "generation": 4,
    "labels": {
      "run": "curl-a-joke"
    },
    "annotations": {
      "deployment.kubernetes.io/revision": "1"
    }
  },
  "spec": {
    "replicas": 4,
    "selector": {
      "matchLabels": {
        "run": "curl-a-joke"
      }
    },
    "template": {
      "metadata": {
        "creationTimestamp": null,
        "labels": {
          "run": "curl-a-joke"
        }
      },
      "spec": {
        "containers": [
          {
            "name": "curl-a-joke",
            "image": "dvdmuckle/curl-a-joke",
            "ports": [
              {
                "containerPort": 8080,
                "protocol": "TCP"
              }
            ],
            "resources": {},
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "imagePullPolicy": "Always"
          }
        ],
        "restartPolicy": "Always",
        "terminationGracePeriodSeconds": 30,
        "dnsPolicy": "ClusterFirst",
        "securityContext": {},
        "schedulerName": "default-scheduler"
      }
    },
    "strategy": {
      "type": "RollingUpdate",
      "rollingUpdate": {
        "maxUnavailable": 1,
        "maxSurge": 1
      }
    }
  },
  "status": {
    "observedGeneration": 4,
    "replicas": 4,
    "updatedReplicas": 4,
    "readyReplicas": 4,
    "availableReplicas": 4,
    "conditions": [
      {
        "type": "Available",
        "status": "True",
        "lastUpdateTime": "2017-11-16T00:51:49Z",
        "lastTransitionTime": "2017-11-16T00:51:49Z",
        "reason": "MinimumReplicasAvailable",
        "message": "Deployment has minimum availability."
      }
    ]
  }
}
