curl-a-joke-1.yml
{
  "kind": "Service",
  "apiVersion": "v1",
  "metadata": {
    "name": "curl-a-joke",
    "namespace": "default",
    "selfLink": "/api/v1/namespaces/default/services/curl-a-joke",
    "uid": "34df21f6-ca57-11e7-ae94-525400ad0d5b",
    "labels": {
      "run": "curl-a-joke"
    }
  },
  "spec": {
    "ports": [
      {
        "protocol": "TCP",
        "port": 8080,
        "targetPort": 8080,
        "nodePort": 31451
      }
    ],
    "selector": {
      "run": "curl-a-joke"
    },
    "type": "NodePort",
    "sessionAffinity": "None",
    "externalTrafficPolicy": "Cluster"
  },
  "status": {
    "loadBalancer": {}
  }
}
