curl-a-joke-svc.yaml
kind: Service
apiVersion: v1
metadata: 
  name: curl-a-joke
spec: 
  selector: 
    app: curl-a-joke
  ports: 
  - protocol: TCP
    port: 8080
    targetPort: 8080
