curl-a-joke-all.yaml
kind: Deployment
metadata: 
  name: curl-a-joke
  labels: 
    app: curl-a-joke
spec: 
  replicas: 4
  selector: 
    matchLabels: 
      app: curl-a-joke
  template: 
    metadata: 
      labels: 
        app: curl-a-joke
    spec: 
      containers: 
      - name: curl-a-joke
        image: dvdmuckle/curl-a-joke:arm
        ports: 
        -  containerPort: 8080
           protocol: TCP
---
apiVersion: v1
kind: Ingress
metadata:
  name: curl-a-joke
spec:
  rules:
  - http:
      paths:
      - path: /curl-a-joke
        backend:
          serviceName: curl-a-joke
          servicePort: 8080
---
kind: Service
apiVersion: v1
metadata: 
  name: curl-a-joke
spec: 
  selector: 
    app: curl-a-joke
  ports: 
  - protocol: TCP
    port: 8080
    targetPort: 8080
