curl-a-joke-ing-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: curl-a-joke
spec:
  backend:
    serviceName: curl-a-joke
    servicePort: 8080
