curl-a-joke-ing.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: curl-a-joke
spec:
  rules:
  - http:
      paths:
      - path: /curl-a-joke
        backend:
          serviceName: curl-a-joke
          servicePort: 8080
